Added Kuhn Poker.

--- a/FastCfr.Test/FastCfr.Test.fsproj
+++ b/FastCfr.Test/FastCfr.Test.fsproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="KuhnPoker.fs" />
     <Compile Include="LeducHoldem.fs" />
     <Compile Include="Tests.fs" />
     <Compile Include="Program.fs" />
